# youtube-to-text

./: .gitignore  README.md  pyproject.toml  transcribe.py
src/: __init__.py  audio.py  cli.py  config.py  downloader.py  transcriber.py  utils.py
tests/: test_audio.py  test_downloader.py  test_transcriber.py  test_utils.py
